test/expected/trailing-return.out
c++decl> set trailing-return
c++decl> declare f as function returning int
auto f() -> int;
c++decl> declare f as function returning pointer to int
auto f() -> int*;
c++decl> declare f as function returning pointer to const int
auto f() -> const int*;
c++decl> set east-const
c++decl> declare f as function returning pointer to const int
auto f() -> int const*;
c++decl> set noeast-const
c++decl> declare f as function returning pointer to function (int) returning pointer to const char
auto f() -> auto (*)(int) -> const char*;
c++decl> declare ! as operator (reference to const S) returning bool
                                                   ^
11,43: syntax error: "S": "to" expected
c++decl> set notrailing-return
c++decl> 
c++decl> set c++03
c++decl> set trailing-return
             ^
15,5: warning: trailing return types not supported until C++11
